Styled and altered style.css and index.html to include max-width

--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 
 body {
 	background: #f9e933;
+	width: 855px; 
+	margin: auto;
 
 }
 header, main, footer {
 	min-width: 855px;
+
+}
+
+header, .container, main, .container, footer, .container {
+	max-width: 855px;
+	margin: auto;
 }
 
 header {
